Defect 1027: IE specific 2-CTA issue text overlapping issue fixed

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -2473,6 +2473,10 @@ ul {
 /** Browser Specific CSS starts here **/
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 
+    .blue-icon-yellow-background .experiencefragment {
+        height: auto !important;
+    }
+
     #slf-locate-advisors-form > div {
         display: -ms-flexbox;
         height: 48px;
